# plasma-nano

./: .gitignore  .kde-ci.yml  CMakeLists.txt  README.md
components/: CMakeLists.txt  fullscreenoverlay.cpp  fullscreenoverlay.h  fullscreenpanel.cpp  fullscreenpanel.h  minishellprivateplugin.cpp  nanoshellprivateplugin.cpp  nanoshellprivateplugin.h  qmldir  startupnotifier.cpp  startupnotifier.h
components/qml/: StartupFeedback.qml
containments/: CMakeLists.txt
containments/homescreen/: metadata.desktop
containments/splitscreen/: metadata.desktop
desktoptoolbox/: Messages.sh  metadata.desktop  metadata.json
po/ar/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/ast/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/az/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/bg/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/ca/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/ca@valencia/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/cs/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/da/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/de/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/el/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/en_GB/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/eo/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/es/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/et/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/eu/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/fi/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/fr/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/ga/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/gl/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/he/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/hi/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/hu/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/ia/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/id/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/is/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/it/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/ja/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/ka/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/ko/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/lt/: plasma_shell_org.kde.plasma.nano.po  plasma_toolbox_org.kde.plasma.nano.desktoptoolbox.po
po/lv/: plasma_shell_org.kde.plasma.nano.po
po/nl/: plasma_shell_org.kde.plasma.nano.po  (+1 more)
session/: CMakeLists.txt  plasma-minishell-wayland.desktop  plasma-minishell.desktop
shell/: metadata.desktop  metadata.json
(+66 files in other folders)
